chore: fix filename one more time

--- a/.github/workflows/transform-tokens.yml
+++ b/.github/workflows/transform-tokens.yml
@@ -31,14 +31,14 @@ jobs:
           # it uses the directory named "tokens" to store this json file (change this if you changed it above to use a different folder)
           dir: 'tokens'
       # we now initialize node to run amazon style dictionary to compile the tokens
-      - name: Use Node.js 14.x
-        uses: actions/setup-node@v1
-        with:
-          # we use version 14.x of node
-          node-version: 14.x
+      # - name: Use Node.js 14.x
+      #   uses: actions/setup-node@v1
+      #   with:
+      #     # we use version 14.x of node
+      #     node-version: 14.x
       # We now run npm i to install all dependencies and run the "transfrom" script that is defined in the package.json (change this if you need to)
-      - name: Transform design tokens 
-        run: 'npm i && npm run transform-tokens'
+      # - name: Transform design tokens 
+      #   run: 'npm i && npm run transform-tokens'
       # We now store the changes in the repository
       - name: Persist changes in repository
         uses: mikeal/publish-to-github-action@master
