chore: fix filename one more time

--- a/.github/workflows/transform-tokens.yml
+++ b/.github/workflows/transform-tokens.yml
@@ -19,6 +19,8 @@ jobs:
       - name: mkdir "tokens" directory
         # change tokens here (and in line 32) if you want to use a differently named folder 
         run: 'mkdir -p tokens'
+      - name: debug
+        run: 'echo "field: ${{ github.event.client_payload }}"'
       # this creates a json file from the stringified json from the request body
       - name: create json from request body
         id: create-json
